add admin route and small updates

--- a/server/views/resetPassword.ejs
+++ b/server/views/resetPassword.ejs
@@ -9,7 +9,7 @@
 <body>
 
     <div class="container mt-4">
-        <form action="/user/reset-password" method="post">
+        <form action="/reset-password" method="post">
             <div class="mb-3">
                 <% if (locals.success) { %>
                     <div class="alert alert-success" role="alert">
