--- a/server/views/signup.ejs
+++ b/server/views/signup.ejs
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
 
-        <form action="/user/signup" method="post" enctype="application/x-www-form-urlencoded">
+        <form action="/signup" method="post" enctype="application/x-www-form-urlencoded">
             <div class="mb-3">
 
                 <label for="firstName" class="form-label">Name</label>
