--- a/server/views/login.ejs
+++ b/server/views/login.ejs
@@ -7,7 +7,7 @@
 <body>
     <div class="container mt-5">
 
-        <form action="/user/login" method="post" enctype="application/x-www-form-urlencoded">
+        <form action="/login" method="post" enctype="application/x-www-form-urlencoded">
             <div class="mb-3">
               <label for="email" class="form-label">Email address</label>
               <input type="email" class="form-control" id="email" name="email">
@@ -24,7 +24,7 @@
                   <% } %>
 
           </div>
-          <a href="/user/forgot-password">Forgot Password?</a>
+          <a href="/forgot-password">Forgot Password?</a>
             <button type="submit" class="btn btn-primary">Login</button>
           </form>
 
