--- a/server/views/partials/navbar.ejs
+++ b/server/views/partials/navbar.ejs
@@ -7,11 +7,18 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
+
+                <% if (locals.user.role=='ADMIN') { %>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">ADMIN</a>
+                    </li>
+                <% } %>
+
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/user/achievements">My Achievements</a>
+                    <a class="nav-link" href="/user/my-achievements">My Achievements</a>
                 </li>
 
                 <li class="nav-item dropdown">
@@ -22,7 +29,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="/user/profile">My Profile</a></li>
-                        <li><a class="dropdown-item" href="/user/logout">Logout</a></li>
+                        <li><a class="dropdown-item" href="/logout">Logout</a></li>
                     </ul>
                 </li>
             </ul>
