--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,3 +22,26 @@ code {
 Nav header{
   max-width: 100%;
 }
+
+
+
+.alldetails_button {
+    height: 60px;
+    width: 300px;
+    font-size: 1.2rem;
+    font-family: Tahoma;
+}
+.login_button, .signup_button {
+    height: 40px;
+    width: 150px;
+    font-size: 1.2rem;
+    font-family: Tahoma;
+}
+
+.dashboard_buttons {
+    height: 50px;
+    width: 100px;
+    font-size: 2.5rem;
+    font-family: Tahoma;
+}
+
