Changes to be committed: 	new file:   client/src/App.jsx 	modified:   client/src/components/Dash.jsx 	modified:   client/src/components/Homepage.jsx 	modified:   client/src/index.css 	modified:   client/src/index.js 	modified:   client/src/pages/forms/Conference.jsx 	modified:   client/src/pages/forms/Fellowship.jsx 	modified:   client/src/pages/forms/Grant.jsx 	modified:   client/src/pages/forms/Journal.jsx 	modified:   client/src/pages/forms/Patent.jsx 	modified:   client/src/pages/forms/Publication.jsx

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@
 
 
 body {
-  background-image: url("/public/gridBackground.svg");
+  /* background-image: url("/public/gridBackground.svg"); */
   margin: 0;
   font-family: Lato, Tahoma, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
