fix edit form and some major changes

--- a/server/views/profile.ejs
+++ b/server/views/profile.ejs
@@ -23,8 +23,8 @@
                 <label for="department" class="form-label mt-3">Department</label>
                 <input type="text" class="form-control" id="department" name="department" placeholder="department" value=<%= locals.user.department %>>
 
-                <label for="position" class="form-label mt-3">Position</label>
-                <input type="text" class="form-control" id="position" name="position" placeholder="position" value=<%= locals.user.position %>>
+                <label for="designation" class="form-label mt-3">Designation</label>
+                <input type="text" class="form-control" id="designation" name="designation" placeholder="designation" value=<%= locals.user.designation %>>
 
                 <label for="phone" class="form-label mt-3">Phone Number</label>
                 <input type="number" class="form-control" id="phone" name="phone" placeholder="phone" value=<%= locals.user.phone %>>
