--- a/server/views/publicationForm.ejs
+++ b/server/views/publicationForm.ejs
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
 
-        <form action="/user/form/publication" method="post" enctype="application/x-www-form-urlencoded">
+        <form action="/user/form/book_bookChapter" method="post" enctype="application/x-www-form-urlencoded">
             <div class="mb-3">
 
                 <label for="bookName" class="form-label">bookName</label>
@@ -26,8 +26,8 @@
                 <label for="isbn" class="form-label">isbn</label>
                 <input type="text" class="mb-2 form-control" id="isbn" name="isbn" placeholder=" isbn">
 
-                <label for="publishYear" class="form-label">publishYear</label>
-                <input type="number" class="mb-2 form-control" id="publishYear" name="publishYear" placeholder=" publishYear">
+                <label for="publicationYear" class="form-label">publicationYear</label>
+                <input type="number" class="mb-2 form-control" id="publicationYear" name="publicationYear" placeholder=" publicationYear">
                
                 <div class="input-group mb-3">
                     <label class="input-group-text" for="inputGroupSelect01">Month</label>
