--- a/server/views/dashboard.ejs
+++ b/server/views/dashboard.ejs
@@ -53,8 +53,8 @@
             <div class="col-sm-6">
                 <div class="card mb-5">
                     <div class="card-body">
-                        <h5 class="card-title">Publication</h5>
-                        <a href="/user/form/publication" class="btn btn-primary">Open</a>
+                        <h5 class="card-title">Book_BookChapter</h5>
+                        <a href="/user/form/book_bookChapter" class="btn btn-primary">Open</a>
                     </div>
                 </div>
             </div>
