--- a/server/views/home.ejs
+++ b/server/views/home.ejs
@@ -12,7 +12,7 @@
             <a href="/logout"> <button type="button" class="btn btn-danger">Logout</button></a>
             <a href="/user/dashboard"> <button type="button" class="btn btn-warning">My Dashboard</button></a>
             <% } else { %>
-                <a href="/login"> <button type="button" class="btn btn-primary">Signin</button></a>
+                <a href="/signin"> <button type="button" class="btn btn-primary">Signin</button></a>
                 <a href="/signup"> <button type="button" class="btn btn-primary">Signup</button></a>
                 <% } %>
         
